--- a/alacritty.toml
+++ b/alacritty.toml
@@ -1,122 +1,208 @@
-# If you come from bash you might have to change your $PATH.
-# export PATH=$HOME/bin:$HOME/.local/bin:/usr/local/bin:$PATH
+# alacritty.toml
+# commented lines are the defaults
+# man 5 alacritty (>0.13) for full config manual
 
-# Path to your Oh My Zsh installation.
-export ZSH="$HOME/.oh-my-zsh"
-export PATH="$PATH:/Users/rubrick/.dotnet/tools"
-export PATH="/opt/homebrew/opt/python@3.13/libexec/bin:$PATH"
-export PYENV_ROOT="$HOME/.pyenv"
-export PATH="$PYENV_ROOT/bin:$PATH"
-export FZF_DEFAULT_OPTS='--height 40% --layout=reverse --border'
+#import = [
+#"~/.config/alacritty/catpuccin-mocha.toml",
+#"~/.config/alacritty/keybindings.toml",
+#]
 
-# Set name of the theme to load --- if set to "random", it will
-# load a random theme each time Oh My Zsh is loaded, in which case,
-# to know which specific one was loaded, run: echo $RANDOM_THEME
-# See https://github.com/ohmyzsh/ohmyzsh/wiki/Themes
-ZSH_THEME="robbyrussell"
+# [shell]
+# program = "/usr/bin/zsh"
+# args = ["--login"]
 
-# Set list of themes to pick from when loading at random
-# Setting this variable when ZSH_THEME=random will cause zsh to load
-# a theme from this variable instead of looking in $ZSH/themes/
-# If set to an empty array, this variable will have no effect.
-# ZSH_THEME_RANDOM_CANDIDATES=( "robbyrussell" "agnoster" )
+#working_directory     = "None"
+live_config_reload = true
+#ipc_socket            = true
 
-# Uncomment the following line to use case-sensitive completion.
-# CASE_SENSITIVE="true"
+[env]
+TERM = "xterm-256color"
 
-# Uncomment the following line to use hyphen-insensitive completion.
-# Case-sensitive completion must be off. _ and - will be interchangeable.
-# HYPHEN_INSENSITIVE="true"
+[window]
+#dimensions            = { columns = 0, lines = 0 }
+#position              = { x = 0, y = 0 }
+padding = { x = 2, y = 2 }
+dynamic_padding = true
+decorations = "None"
+opacity = 1.0
+blur = true
+startup_mode = "FullScreen"
+#title                 = "Alacritty"
+dynamic_title = true
+#class                 = { instance = "Alacritty", general = "Alacritty" }
+decorations_theme_variant = "Dark"
+resize_increments = false
+#option_as_alt         = "None"
 
-# Uncomment one of the following lines to change the auto-update behavior
-# zstyle ':omz:update' mode disabled  # disable automatic updates
-zstyle ':omz:update' mode auto      # update automatically without asking
-# zstyle ':omz:update' mode reminder  # just remind me to update when it's time
 
-# Uncomment the following line to change how often to auto-update (in days).
-# zstyle ':omz:update' frequency 13
+[scrolling]
+history = 65535
+multiplier = 3
 
-# Uncomment the following line if pasting URLs and other text is messed up.
-# DISABLE_MAGIC_FUNCTIONS="true"
+[font]
+normal = { family = "FiraCode Nerd Font", style = "Regular" }
+bold = { family = "FiraCode Nerd Font", style = "Bold" }
+italic = { family = "FiraCode Nerd Font", style = "Italic" }
+bold_italic = { family = "FiraCode Nerd Font", style = "Bold Italic" }
+size = 14
+# offset = { x = 0, y = 0 }
+# glyph_offset = { x = 0, y = 0 }
+# builtin_box_drawing   = true
 
-# Uncomment the following line to disable colors in ls.
-DISABLE_LS_COLORS="false"
 
-# Uncomment the following line to disable auto-setting terminal title.
-# DISABLE_AUTO_TITLE="true"
+# catpuccin-mocha, ported from .yml
+# [colors.primary]
+# background = "#1E1E2E"
+# foreground = "#CDD6F4"
+# dim_foreground = "#CDD6F4"
+# bright_foreground = "#CDD6F4"
 
-# Uncomment the following line to enable command auto-correction.
-# ENABLE_CORRECTION="true"
+# [colors.cursor]
+# text = "#1E1E2E"
+# cursor = "#F5E0DC"
 
-# Uncomment the following line to display red dots whilst waiting for completion.
-# You can also set it to another string to have that shown instead of the default red dots.
-# e.g. COMPLETION_WAITING_DOTS="%F{yellow}waiting...%f"
-# Caution: this setting can cause issues with multiline prompts in zsh < 5.7.1 (see #5765)
-# COMPLETION_WAITING_DOTS="true"
+# [colors.vi_mode_cursor]
+# text = "#1E1E2E"
+# cursor = "#B4BEFE"
 
-# Uncomment the following line if you want to disable marking untracked files
-# under VCS as dirty. This makes repository status check for large repositories
-# much, much faster.
-# DISABLE_UNTRACKED_FILES_DIRTY="true"
+# [colors.search.matches]
+# foreground = "#1E1E2E"
+# background = "#A6ADC8"
 
-# Uncomment the following line if you want to change the command execution time
-# stamp shown in the history command output.
-# You can set one of the optional three formats:
-# "mm/dd/yyyy"|"dd.mm.yyyy"|"yyyy-mm-dd"
-# or set a custom format using the strftime function format specifications,
-# see 'man strftime' for details.
-# HIST_STAMPS="mm/dd/yyyy"
+# [colors.search.focused_match]
+# foreground = "#1E1E2E"
+# background = "#A6E3A1"
 
-# Would you like to use another custom folder than $ZSH/custom?
-# ZSH_CUSTOM=/path/to/new-custom-folder
+# [colors.hints.start]
+# foreground = "#1E1E2E"
+# background = "#F9E2AF"
 
-# Which plugins would you like to load?
-# Standard plugins can be found in $ZSH/plugins/
-# Custom plugins may be added to $ZSH_CUSTOM/plugins/
-# Example format: plugins=(rails git textmate ruby lighthouse)
-# Add wisely, as too many plugins slow down shell startup.
-plugins=(git
-        zsh-autosuggestions
-        zsh-syntax-highlighting
-        eza
-        thefuck
-        fzf-tab
-        zsh-bat
-        z
-        pipenv)
+# [colors.hints.end]
+# foreground = "#1E1E2E"
+# background = "#A6ADC8"
 
-source $ZSH/oh-my-zsh.sh
+# [colors.line_indicator]
+# #foreground            = "None"
+# #background            = "None"
 
-# User configuration
+# [colors.footer_bar]
+# foreground = "#1E1E2E"
+# background = "#A6ADC8"
 
-# export MANPATH="/usr/local/man:$MANPATH"
+# [colors.selection]
+# text = "#1E1E2E"
+# background = "#F5E0DC"
 
-# You may need to manually set your language environment
-export LANG=es_ES.UTF-8
+# [colors.normal]
+# black = "#45475A"
+# red = "#F38BA8"
+# green = "#A6E3A1"
+# yellow = "#F9E2AF"
+# blue = "#89B4FA"
+# magenta = "#F5C2E7"
+# cyan = "#94E2D5"
+# white = "#BAC2DE"
 
-# Preferred editor for local and remote sessions
-# if [[ -n $SSH_CONNECTION ]]; then
-#   export EDITOR='vim'
-# else
-#   export EDITOR='nvim'
-# fi
+# [colors.bright]
+# black = "#585B70"
+# red = "#F38BA8"
+# green = "#A6E3A1"
+# yellow = "#F9E2AF"
+# blue = "#89B4FA"
+# magenta = "#F5C2E7"
+# cyan = "#94E2D5"
+# white = "#A6ADC8"
 
-# Compilation flags
-# export ARCHFLAGS="-arch $(uname -m)"
+# [colors.dim]
+# black = "#45475A"
+# red = "#F38BA8"
+# green = "#A6E3A1"
+# yellow = "#F9E2AF"
+# blue = "#89B4FA"
+# magenta = "#F5C2E7"
+# cyan = "#94E2D5"
+# white = "#BAC2DE"
 
-# Set personal aliases, overriding those provided by Oh My Zsh libs,
-# plugins, and themes. Aliases can be placed here, though Oh My Zsh
-# users are encouraged to define aliases within a top-level file in
-# the $ZSH_CUSTOM folder, with .zsh extension. Examples:
-# - $ZSH_CUSTOM/aliases.zsh
-# - $ZSH_CUSTOM/macos.zsh
-# For a full list of active aliases, run `alias`.
-#
-# Example aliases
-# alias zshconfig="mate ~/.zshrc"
-# alias ohmyzsh="mate ~/.oh-my-zsh"
-alias lx='eza -lbhHigUmuSa@'
-alias lt='eza --tree $eza_params'
-alias tree='eza --tree $eza_params'
+# [colors]
+# indexed_colors = [
+#   { index = 16, color = "#FAB387" },
+#   { index = 17, color = "#F5E0DC" },
+# ]
+# transparent_background_colors = false
+# draw_bold_text_with_bright_colors = true
 
-[ -f ~/.fzf.zsh ] && source ~/.fzf.zsh
+[bell]
+animation = "EaseOutExpo"
+duration = 0
+color = "#C0C5CE"
+
+[selection]
+#semantic_escape_chars = ",│‘|:"' ()[]{}<>t"
+save_to_clipboard = true
+
+[cursor.style]
+shape = "Beam"
+blinking = "Always"
+
+[cursor.vi_mode_style]
+shape = "Block"
+blinking = "Off"
+
+[cursor]
+blink_interval = 500
+blink_timeout = 0
+#unfocused_hollow      = true
+#thickness             = 0.15
+
+[terminal]
+#osc52                 = "OnlyCopy"
+
+[mouse]
+hide_when_typing = true
+bindings = [{ mouse = "Middle", action = "PasteSelection" }]
+
+[hints]
+#alphabet              = "jfkdls;ahgurieowpq"
+
+[[hints.enabled]]
+command = "xdg-open"
+## command             = "open" # On macOS
+## command             = { program = "cmd", args = [ "/c", "start", "" ] } # On Windows
+hyperlinks = true
+post_processing = true
+#persist               = false
+#mouse.enabled         = true
+#binding               = { key = "U", mods = "Control|Shift" }
+#regex                 = "(ipfs:|ipns:|magnet:|mailto:|gemini://|gopher://|https://|http://|news:|file:|git://|ssh:|ftp://)[^\u0000-\u001F\u007F-\u009F<>\"\\s{-}\\^⟨⟩‘]+"
+
+[keyboard]
+bindings = [
+  { key = "V", mods = "Control|Shift", action = "Paste" },
+  { key = "C", mods = "Control|Shift", action = "Copy" },
+  { key = "Paste", action = "Paste" },
+  { key = "Copy", action = "Copy" },
+  { key = "Insert", mods = "Shift", action = "PasteSelection" },
+  { key = "F", mods = "Control|Shift", action = "SearchForward", mode = "~Search" },
+  { key = "B", mods = "Control|Shift", action = "SearchBackward", mode = "~Search" },
+  { key = "Key0", mods = "Control", action = "ResetFontSize" },
+  { key = "Equals", mods = "Control", action = "IncreaseFontSize" },
+  { key = "Minus", mods = "Control", action = "DecreaseFontSize" },
+  { key = "L", mods = "Control", action = "ClearLogNotice" },
+  { key = "L", mods = "Control", chars = "\f" },
+  { key = "PageUp", mods = "Shift", action = "ScrollPageUp", mode = "~Alt" },
+  { key = "PageDown", mods = "Shift", action = "ScrollPageDown", mode = "~Alt" },
+  { key = "Up", mods = "Shift", action = "ScrollLineUp", mode = "~Alt" },
+  { key = "Down", mods = "Shift", action = "ScrollLineDown", mode = "~Alt" },
+  { key = "Home", mods = "Shift", action = "ScrollToTop", mode = "~Alt" },
+  { key = "End", mods = "Shift", action = "ScrollToBottom", mode = "~Alt" },
+]
+
+
+[debug]
+#render_timer          = false
+#persistent_logging    = false
+#log_level             = "Warn"
+#renderer              = "None"
+#print_events          = false
+#highlight_damage      = false
+#prefer_egl            = false
